--- a/emilybrenn.css
+++ b/emilybrenn.css
@@ -113,9 +113,8 @@ h1 a,
 
 header {
 	margin: 0 auto;
-	background: #5445a1 url("https://i.imgur.com/dHtyQOl.jpg") no-repeat left
-		center;
-	height: 400px;
+	background: #5445a1 url("https://i.imgur.com/dHtyQOl.jpg") no-repeat center 40%;
+	height: 425px;
 	background-size: 100%;
 }
 header article,
