--- a/emilybrenn.css
+++ b/emilybrenn.css
@@ -84,7 +84,7 @@ h2,
 }
 h2 {
 	margin-top: 4.8rem;
-	color: #5445a1;
+	color: #3b6c82;
 }
 h3 {
 	font-size: 1.4rem;
@@ -113,7 +113,7 @@ h1 a,
 
 header {
 	margin: 0 auto;
-	background: #5445a1 url("https://i.imgur.com/dHtyQOl.jpg") no-repeat center 40%;
+	background: #3b6c82 url("https://i.imgur.com/dHtyQOl.jpg") no-repeat center 40%;
 	height: 425px;
 	background-size: 100%;
 }
